plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.kotlin.android)
}

def localProperties = new Properties()
def localPropertiesFile = rootProject.file('local.properties')
if (localPropertiesFile.exists()) {
    localProperties.load(new FileInputStream(localPropertiesFile))
}

def getGitTag() {
    def tag = "unknown"
    try {
        def stdout = new ByteArrayOutputStream()
        exec {
            commandLine 'git', 'describe', '--tags', '--abbrev=0'
            standardOutput = stdout
        }
        tag = stdout.toString().trim()
        if (tag.startsWith("v")) {
            tag = tag.substring(1)
        }
    } catch (ignored) {
    }
    return tag
}

static def getVersionCodeByTimestamp() {
    def baseDate = Date.parse("yyyy-MM-dd HH:mm:ss", "2025-01-01 00:00:00")
    def now = new Date()
    def diff = (now.time - baseDate.time) / 1000
    return diff.toInteger()
}

android {
    namespace 'org.chimeramc.launcher'
    compileSdkVersion 36
    defaultConfig {
        applicationId "org.chimeramc.launcher"
        minSdkVersion 28
        targetSdkVersion 35
        versionCode getVersionCodeByTimestamp()
        versionName getGitTag()
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        buildConfigField "String", "CURSEFORGE_API_KEY", "\"${localProperties.getProperty('curseforge.api_key', '')}\""
        ndk {
            //noinspection ChromeOsAbiSupport
            abiFilters 'arm64-v8a', 'armeabi-v7a'
        }
        externalNativeBuild {
            cmake {
                arguments "-DANDROID_STL=c++_shared"
            }
        }
    }

    buildFeatures {
        viewBinding true
    }
    buildFeatures {
        prefab true
    }
    buildFeatures {
        buildConfig true
    }
    sourceSets {
        main {
            assets.srcDirs += rootProject.file('resources')
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            ndk {
                debugSymbolLevel 'FULL'
            }
            buildConfigField "boolean", "IS_BETA", "false"
        }
        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            ndk {
                debugSymbolLevel 'FULL'
            }
            buildConfigField "boolean", "IS_BETA", "false"
        }
        beta {
            initWith release
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            resValue "string", "app_name", "Chimera Launcher Beta"
            buildConfigField "boolean", "IS_BETA", "true"
            matchingFallbacks = ["release"]
            ndk {
                debugSymbolLevel 'FULL'
            }
        }

    }
    packagingOptions {
        jniLibs.useLegacyPackaging = true
        doNotStrip "**/*.so"
        resources.excludes += [
                "DebugProbesKt.bin"
        ]

        resources.pickFirsts += [
                "META-INF/INDEX.LIST",
                "META-INF/DEPENDENCIES",
                "META-INF/io.netty.versions.properties"
        ]
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }

    externalNativeBuild {
        cmake {
            path "src/main/cpp/CMakeLists.txt"
        }
    }

    ndkVersion = "28.2.13676358"
}

dependencies {
    implementation project(':minecraft')
    implementation project(':pojav_controls')
    implementation libs.minecraftauth
    implementation libs.commons.httpclient
    implementation libs.commons.gson
    implementation libs.core.splashscreen
    implementation libs.appcompat
    implementation libs.conscrypt.android
    implementation libs.constraintlayout
    implementation libs.material
    implementation libs.gson
    implementation libs.androidx.preference.ktx
    implementation libs.androidx.games.activity
    implementation libs.okhttp
    implementation libs.androidx.dynamicanimation
    implementation libs.androidx.browser
    implementation libs.bedrock.connection
    implementation libs.xcrash
    // Microsoft Authentication Library (MSAL) for official OAuth
    implementation 'com.microsoft.identity.client:msal:3.2.0'
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    implementation libs.glide
}
